# protectogotchi

./: .gitignore  README.md  pyproject.toml  start.py
docs/: ARCHITECTURE.md
examples/: config.json
src/protectogotchi/: __init__.py  __main__.py  agent.py  arsenal.py  cli.py  config.py  detection.py  doctor.py  enforcement.py  external_tools.py  face.py  knowledge.py  models.py  netutil.py  network_map.py  neural.py  placement.py  policy.py  response.py  simulation.py  state.py  tools.py  topology.py  web.py
src/protectogotchi/capabilities/: __init__.py  autodns.py  autoops.py  base.py  compliance.py  flowcollector.py  holoview.py  ids_orchestrator.py  intel_feed.py  ip_planner.py  ir_engine.py  logpipe.py  netconfig.py  netml.py  orchestrator.py  pcapbot.py  policyguru.py  redteam_bot.py  routelab.py  sandboxx.py  tool_runtime.py  vuln_scout.py  zt_broker.py
src/protectogotchi/collectors/: __init__.py  base.py  linux.py  macos.py
tests/: test_agent.py  test_arsenal.py  test_cli.py  test_config.py  test_detection.py  test_enforcement.py  test_external_tools.py  test_knowledge.py  test_netutil.py  test_network_map.py  test_neural_policy.py  test_placement.py  test_simulation.py  test_start.py  test_state.py  test_tools.py  test_topology.py  test_web.py
