[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "protectogotchi"
version = "0.1.0"
description = "A local-first defensive AI companion for Wi-Fi and home networks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PondSec" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
ml = [
  "numpy>=2.0",
  "torch>=2.2"
]

[project.scripts]
protectogotchi = "protectogotchi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
